--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:t_mkv"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="t-mkv" Height="450" Width="800">
     <Grid>
         <TabControl x:Name="tabControl">
             <TabItem Header="Kopfdaten">
